   * preferences available from multiplayer lobby
   * simplified upkeep: Each controlled village gives 2 GP per turn, and 
     each unit costs 1*(# of Levels) GP per turn, unless loyal.
   * new /help command in mp lobby to get info on available commands
   * :mute command to silent observers
   * host changes automatically if game creator leaves => no disconnections

Version 1.1.2:
 * campaigns
   * campaigns removed from mainline: Son of the Black Eye, The Dark Hordes
   * campaigns added to mainline:
     * The South Guard
     * Under the Burning Suns
   * new tutorial replacing the old one
   * Eastern Invasion
     * rewrote dialogue in Lake Vrug, Evacuation, and The Drowned Plains
     * redid cave maps to take advantage of new terrains
     * redid some outdoor maps to be more interesting
     * gave an early finish bonus in scenario Captured
   * Heir to the Throne
     * switched over to [music] tag and removed outdated music choices
     * new story art
     * Isle of Anduin - added destruction to the map
     * Northern Winter - added turns for balancing
     * Scepter of Fire - enemies have less gold for balancing
     * Swamp of Dread - smaller map for faster but more intense gameplay
     * minor gameplay improvement for Swamp of Dread
     * removed Mountain Pass and Valley of Statues from the campaign
     * started to update dots on the big map
   * The Rise of Wesnoth
     * Replaced all occurences of the Demilich with the normal Lich
     * Updated path information
     * updated music tags to new format and removed outdated music choices
   * The South Guard
     * bugfixes, and clarification of objectives
     * switched to using the {IS_HERO} macro
     * all the unit names are not translatable
     * made translatable some forgotten strings
     * switched over to [music] from music=
       got rid of depreciated music and wired in new music.
     * Proven By The Sword: fixed recall of Javelineers
     * removed the uneeded Dread Lich