@@ -12,70 +12,64 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 .\"
-
-.TH WESNOTH 6 "June 2005" "wesnoth" "Battle for Wesnoth"
-
+.
+.TH WESNOTH 6 "2006" "wesnoth" "Battle for Wesnoth"
+.
 .SH NAME
-Battle for Wesnoth \- fantasy turn-based strategy game
-
+wesnoth \- Battle for Wesnoth, a turn-based fantasy strategy game
+.
 .SH SYNOPSIS
+.
 .B wesnoth
-[\fIOPTION\fR]
+[\fIOPTIONS\fR]
 [\fIPATH_TO_DATA\fR]
-
+.
 .SH DESCRIPTION
+.
 Battle for
 .B Wesnoth
 is a turn-based fantasy strategy game.
 
-Defeat all enemy leaders using a well-chosen cadre of troops, taking
-care to husband your resources of gold and villages. All units have
-their own strengths and weaknesses; to win, you must deploy your forces
-to their best advantage while denying your foes the chance to do the
-same. As units gain experience, they acquire new abilities and become
-more powerful. You can play in your own language, and even create your
-own custom units, scenarios or campaigns. Test your skill against a
-smart computer opponent, or join Wesnoth's large community of on-line
-players.
-
+Defeat all enemy leaders using a well-chosen cadre of troops, taking 
+care to manage your resources of gold and villages. All units have 
+their own strengths and weaknesses; to win, deploy your forces to 
+their best advantage while denying your foes the chance to do the 
+same. As units gain experience, they acquire new abilities and 
+become more powerful. Play in your own language and test your skill 
+against a smart computer opponent, or join Wesnoth's large community 
+of on-line players. Create your own custom units, scenarios or 
+campaigns, and share them with others.
+.
 .SH OPTIONS
-
+.
 .TP
-.B --bpp
+.BI --bpp \ number
 sets BitsPerPixel value. Example: --bpp 32
-
 .TP
-.B --compress \ <infile> \ <outfile>
+.BI --compress \ <infile> \  <outfile>
 compresses a savefile (infile) that is in text WML format into binary WML format (outfile).
-
 .TP
-.BR -d , \ --debug
+.B -d, \ --debug
 shows extra debugging information and enables additional command mode
 options in-game (see the Wiki at http://www.wesnoth.org/ for more
 information about command mode).
-
 .TP
-.B --decompress \ <infile> \ <outfile>
+.BI --decompress \ <infile> \  <outfile>
 decompresses a savefile (infile) that is in binary WML format into text
 WML format (outfile).
-
 .TP
-.BR -f , \ --fullscreen
+.B -f, \ --fullscreen
 runs the game in full screen mode.
-
 .TP
 .B --fps
 displays the number of frames per second the game is currently running
 at, in a corner of the screen.
-
 .TP
-.BR -h , \ --help
+.B -h, \ --help
 displays a summary of command line options to standard output, and exits.
-
 .TP
-.BR --load FILE
-runs the game saved in FILE in the standard save game directory.
-
+.BI --load \ savegame
+loads the file savegame from the standard save game directory.
 .TP
 .BR --log-error="domain1,domain2,..." , \ --log-warning=... , \ --log-info=...
 sets the severity level of the debug domains. "all" can be used to match
@@ -86,103 +80,94 @@ shows all messages,
 only warnings and errors, and
 .B --log-error
 just errors.
-
 .TP
 .B --multiplayer
 runs a multiplayer game. There are additional options that can be used
 together with
 .B --multiplayer
 as explained below.
-
 .TP
-.BR --nocache
+.B --nocache
 disables caching of game data.
-
 .TP
-.BR --nosound
-runs game without sounds and music.
-
+.B --nosound
+runs the game without sounds and music.
 .TP
 .BR --path
 prints the name of the game data directory and exits.
-
 .TP
-.BR -r , \ --resolution
-sets screen resolution. Example: -r 800x600
-
+.BI -r, \ --resolution \ XxY
+sets the screen resolution. Example: -r 800x600
 .TP
-.BR -t , \ --test
+.B -t, \ --test
 runs the game in a small test scenario.
-
 .TP
-.BR -v , \ --version
-shows version number and exits.
-
+.B -v, \ --version
+shows the version number and exits.
 .TP
-.BR -w , \ --windowed
+.B -w, \ --windowed
 runs the game in windowed mode.
-
+.
 .SH Options for --multiplayer
-
+.
 The side-specific multiplayer options are marked with <number>. <number>
 has to be replaced by a side number. It usually is 1 or 2 but depends on
 the number of players possible in the chosen scenario.
-
 .TP
-.BR --era=value
+.B --algorithm<number>=value
+selects a non-standard algorithm to be used by the AI controller for
+this side. Available values: "idle_ai" and "sample_ai".
+.TP 
+.B --controller<number>=value
+selects the controller for this side. Available values: "human" and "ai".
+.TP 
+.B --era=value
 use this option to play in the selected era instead of the "Default"
 era. The era is chosen by an id. Eras are described in the
 data/multiplayer.cfg file.
-
 .TP
 .B --nogui
 runs the game without the GUI. Must appear before
 .B --multiplayer
 to have the desired effect.
-
 .TP
-.BR --scenario=value
-selects a multiplayer scenario. The default scenario is "multiplayer_test".
-
-.TP
-.BR --algorithm<number>=value
-selects a non-standard algorithm to be used by the AI controller for
-this side. Available values: "idle_ai" and "sample_ai".
-
-.TP
-.BR --controller<number>=value
-selects the controller for this side. Available values: "human" and "ai".
-
-.TP
-.BR --parm<number>=name:value
+.B --parm<number>=name:value
 sets additional parameters for this side. This parameter depends on the
 options used with
-.B --controller 
+.B --controller
 and
 .B --algorithm.
 It should only be useful for people designing their own AI. (not yet
 documented completely)
-
 .TP
-.BR --side<number>=value
+.B --scenario=value
+selects a multiplayer scenario. The default scenario is "multiplayer_Charge".
+.TP
+.B --side<number>=value
 selects a faction of the current era for this side. The faction is
 chosen by an id. Factions are described in the data/multiplayer.cfg
 file.
-
+.TP
+.B --turns=value
+sets the number of turns for the chosen scenario. The default is "50".
+.TP
+Example to test your own AI: 
+wesnoth --multiplayer --controller2=python_ai --algorithm2=python_ai --parm2=python_script:py/my_own_python_ai.py --side2=Rebels
+.
 .SH AUTHOR
 Written by David White <davidnwhite@verizon.net>.
 .br
-Edited by Nils Kneuper <crazy-ivanovic@gmx.net> and ott <ott@gaon.net>.
+Edited by Nils Kneuper <crazy-ivanovic@gmx.net>, ott <ott@gaon.net> and Soliton <soliton@sonnenkinder.org>.
 .br
 This manual page was originally written by Cyril Bouthors <cyril@bouthors.org>.
 .br
 Visit the official homepage: http://www.wesnoth.org/
-
+.
 .SH COPYRIGHT
 Copyright \(co 2003-2006 David White <davidnwhite@verizon.net>
 .br
 This is Free Software; this software is licensed under the GPL version 2, as published by the Free Software Foundation.
 There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-
+.
 .SH SEE ALSO
 wesnoth_editor(6), wesnothd(6)
