@@ -60,7 +60,7 @@ binds the server to the specified port. If no port is specified, port
 15000 will be used.
 .TP
 .BI -t,\ --threads \ number
-sets the number of worker threads for network I/O to n (default: 5).
+sets the number of worker threads for network I/O to n (default: 5, max: 30).
 .TP
 .B -V,\ --version
 shows version number and exits.
