@@ -87,6 +87,7 @@ SVN trunk (1.1.2+svn):
    * new /help command in mp lobby to get info on available commands
    * :mute command to silent observers
    * host changes automatically if game creator leaves => no disconnections
+   * new --turns= commandline parameter
 
 Version 1.1.2:
  * campaigns
